# transformer-heads

./: .gitignore  .readthedocs.yaml  =  CITATION.cff  LICENSE  README.md  headed_config.py  headed_mistral.py  headed_mistral_config.py  headed_model.py  headed_output.py  load_in_params.py  load_model.py  mlp_head.py  pyproject.toml  test_load_model.py  util.py
.github/workflows/: publish_to_pypi.yml
archive/: load_in_params.py
docs/: requirements.txt
docs/source/: conf.py  getting_started.md  images.rst  index.rst  modules.rst  transformer_heads.model.rst  transformer_heads.rst  transformer_heads.tests.rst  transformer_heads.util.rst
notebooks/: doing_something_wild.ipynb  joint_multitask_learning.ipynb  linear_probe.ipynb  multi_linear_probe.ipynb  text_classfication.ipynb  text_classification_qlora.ipynb
notebooks/base/: joint_multitask_learning.ipynb  linear_probe.ipynb  multi_linear_probe.ipynb  saving_and_loading.ipynb  text_classfication.ipynb  text_classification.ipynb  text_classification_qlora.ipynb
notebooks/gpt2/: joint_multitask_learning.ipynb  linear_probe.ipynb  multi_linear_probe.ipynb  saving_and_loading.ipynb  text_classification_full_finetune.ipynb  text_classification_linear_probe.ipynb  text_classification_qlora.ipynb
notebooks/llama/: joint_multitask_learning.ipynb  linear_probe.ipynb  (+3 more)
other/: pip_freeze.txt
scripts/: paper_shredder.bash  paper_shredder.sh  remove_eval_spam.py  run_slurm.sh  shredder_papers.py
transformer_heads/: __init__.py  config.py  constants.py  output.py
workflows/: publish_to_pypi.yml
(+26 files in other folders)
